Initial project setup

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,18 @@
 ---
-
+import ToasterClient from "../components/ui/ToasterClient.tsx";
+import ToastTest from "../components/ui/ToastTest.tsx";
+import Layout from "../layouts/Layout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout
+  title="Harmony Music Academy"
+  description="Dublin’s premier music school"
+>
+  <article class="prose">
+    <h1>How to choose the right music teacher</h1>
+    <p>Some text here explaining the process...</p>
+  </article>
+
+  <ToasterClient client:load />
+  <ToastTest client:load />
+</Layout>
