--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,4 +15,13 @@ import Layout from "../layouts/Layout.astro";
 
   <ToasterClient client:load />
   <ToastTest client:load />
+  <button id="error-button">Throw test error</button>
+  <script>
+    function handleClick() {
+      throw new Error("This is a test error");
+    }
+    document
+      .querySelector("#error-button")!
+      .addEventListener("click", handleClick);
+  </script>
 </Layout>
