--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
-import ToasterClient from "../components/ui/ToasterClient.tsx";
-import ToastTest from "../components/ui/ToastTest.tsx";
+import InfoPackFormIsland from "../features/InfoPack/islands/InfoPackFormIsland";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -8,20 +7,7 @@ import Layout from "../layouts/Layout.astro";
   title="Harmony Music Academy"
   description="Dublin’s premier music school"
 >
-  <article class="prose">
-    <h1>How to choose the right music teacher</h1>
-    <p>Some text here explaining the process...</p>
-  </article>
-
-  <ToasterClient client:load />
-  <ToastTest client:load />
-  <button id="error-button">Throw test error</button>
-  <script>
-    function handleClick() {
-      throw new Error("This is a test error");
-    }
-    document
-      .querySelector("#error-button")!
-      .addEventListener("click", handleClick);
-  </script>
+  <main>
+    <InfoPackFormIsland client:load />
+  </main>
 </Layout>
