--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ const {
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
   </head>
 
-  <body class="bg-white text-gray-900 antialiased">
+  <body class="bg-background text-foreground antialiased">
     <slot />
   </body>
 </html>
